# BraxRL

./: .gitignore  README.md  TEMPLATE_README.md  environment.yml  pyproject.toml  requirements.txt  run.sh  setup.cfg
.github/workflows/: lint.yml  test.yml
models/TD3/: mlp.py  replay_buffer.py  td3.py
reports/params/: ant_param
reports/visualizations/: ant.html  antsmall.html  halfcheetah.html  humanoid.html  humanoidstandup.html
src/: __init__.py  config.py  dataset.py  features.py  plots.py  train.py  train2.py  train_with_visualize.py  visualize.py
src/DDPG/: DDPG.py  nn.py  plots.py  replay_buffer.py  train.py  visualization.py
src/DDPG/jax/: DDPG.py  plots.py  replay_buffer.py  train.py
src/DDPG/pytorch/: main.py  nn.py  replay_buffor.py  train.py  visualization.py
src/PPO/: Actor.py  Agent.py  Critic.py  Memory.py  Replay_Memory.py  tools.py
src/SAC/: actor.py  agent.py  critic.py  test.py  test_main.py  test_mujco.py  training.py  value.py
src/SAC/brax/: plots.py  train.py  train_with_visualize.py  visualize.py
src/SAC/jax/: agent.py
src/SAC/pytorch/: actor.py  critic.py  value.py
src/TD3/: example.py  mlp.py  replaybuffer.py  td3.py
src/modeling/: predict.py
tests/: test_showcase.py
utils/: test_jax_speed.py
