[project]
name = "braxrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "brax>=0.13.0",
    "distrax>=0.1.7",
    "flashbax>=0.1.3",
    "jax[cuda12]>=0.7.1",
    "matplotlib>=3.10.6",
    "types-dataclasses>=0.6.6",
]
