[project]
name = "braxrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "black>=25.11.0",
    "brax>=0.13.0",
    "distrax>=0.1.7",
    "flashbax>=0.1.3",
    "isort>=7.0.0",
    "jax[cuda12]>=0.7.1",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.6",
    "mypy>=1.19.0",
    "types-dataclasses>=0.6.6",
]
